[package]
name = "anchor-amm-2023"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_amm_2023"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = "0.28.0"
getrandom = { version = "0.2.9", features = ["custom"] }
solana-program = "=1.16.1"
winnow="=0.4.1"
toml_datetime="=0.6.1"
constant-product-curve = { git = "https://github.com/deanmlittle/constant-product-curve.git" }
